changed button colors and added styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Take Better Notes</h1>
     </header>
-    <button>New Note</button><button>Dark Theme</button>
+    <button>New Note</button><button class="darktheme">Dark Theme</button>
     <p>This is a placeholder</p>
 </main>
    <aside><h2>My Notes</h2></aside>
