button tweaks and more styling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <header>
         <h1>Take Better Notes</h1>
     </header>
-    <button>New Note</button><button class="darktheme">Dark Theme</button>
-    <p>This is a placeholder</p>
+    <div class="firstbuttons">
+        <button>New Note</button><button class="darktheme">Dark Theme</button>
+    </div>
+        <p>This is a placeholder</p>
 </main>
    <aside><h2>My Notes</h2></aside>
    <footer>Keep in Touch</footer>
