added textbox with placeholder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="firstbuttons">
         <button>New Note</button><button class="darktheme">Dark Theme</button>
     </div>
-        <p>This is a placeholder</p>
+        <textarea placeholder="This is a placeholder"></textarea>
 </main>
    <aside><h2>My Notes</h2></aside>
    <footer>Keep in Touch</footer>
