--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <div class="firstbuttons">
         <button>New Note</button><button class="darktheme">Dark Theme</button>
     </div>
-        <textarea placeholder="This is a placeholder"></textarea>
-</main>
+    <div class="textarea">
+        This is a placeholder
+    </div>
+    </main>
    <aside><h2>My Notes</h2></aside>
    <footer>Keep in Touch</footer>
 </body>
