created AND styled buttons below textarea

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="textarea">
         This is a placeholder
     </div>
+    <div class="secondbuttons">
+        <button>Save</button><button class="cancel">Cancel</button>
+    </div>
     </main>
    <aside><h2>My Notes</h2></aside>
    <footer>Keep in Touch</footer>
