added about and docs as buttons incase of java

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>Take Better Notes</h1>
     </header>
+    <div class="info"><button>About</button><button>Docs</button></div>
     <div class="firstbuttons">
         <button>New Note</button><button class="darktheme">Dark Theme</button>
     </div>
