added pictures into html for footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </div>
     </main>
    <aside><h2>My Notes</h2></aside>
-   <footer>Keep in Touch</footer>
+   <footer>
+    <p>Keep in Touch</p>
+    <a><img src="linkedin.png" width="100px" height="100px"></a>
+    <a><img src="internetlogo.png" width="100px" height="100px" alt="Internet"></a>
+   </footer>
 </body>
 </html>
