--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
    <aside><h2>My Notes</h2></aside>
    <footer>
     <p>Keep in Touch</p>
-    <a><img src="linkedin.png" width="100px" height="100px"></a>
-    <a><img src="internetlogo.png" width="100px" height="100px" alt="Internet"></a>
+    <a href="https://www.linkedin.com/home?originalSubdomain=ca" alt="linkedin"><img src="linkedin.png" width="50px" height="50px"></a>
+    <a href="https://www.google.com/" alt="internet"><img src="internetlogo.png" width="50px" height="50px" alt="Internet"></a>
    </footer>
 </body>
 </html>
