--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
         <button>Save</button><button class="cancel">Cancel</button>
     </div>
     </main>
-   <aside><h2>My Notes</h2></aside>
+   <aside>
+    <h2>My Notes</h2>
+    <ul>
+        <li>
+            Note 1
+        </li>
+        <li>
+            Note 2
+        </li>
+    </ul>
+   </aside>
    <footer>
     <p>Keep in Touch</p>
     <a href="https://www.linkedin.com/home?originalSubdomain=ca" alt="linkedin"><img src="linkedin.png" width="50px" height="50px"></a>
