--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button>New Note</button><button class="darktheme">Dark Theme</button>
     </div>
     <div class="textarea">
-        This is a placeholder
+        This is a placeholder. . . 
     </div>
     <div class="secondbuttons">
         <button>Save</button><button class="cancel">Cancel</button>
