validated code and made correcting

--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
-    <link href="css/mystyle.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
-</head>
-<body>
-   <main>
-    <header>
+    <link href="css/mystyle.css" rel="stylesheet" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap"
+      rel="stylesheet"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap"
+      rel="stylesheet"
+    >
+  </head>
+  <body>
+    <main>
+      <header>
         <h1>Take Better Notes</h1>
-    </header>
-    <div class="info"><button>About</button><button>Docs</button></div>
-    <div class="firstbuttons">
+      </header>
+      <div class="info"><button>About</button><button>Docs</button></div>
+      <div class="firstbuttons">
         <button>New Note</button><button class="darktheme">Dark Theme</button>
-    </div>
-    <div class="textarea">
-        This is a placeholder. . . 
-    </div>
-    <div class="secondbuttons">
+      </div>
+      <div class="textarea">This is a placeholder. . .</div>
+      <div class="secondbuttons">
         <button>Save</button><button class="cancel">Cancel</button>
-    </div>
+      </div>
     </main>
-   <aside>
-    <h2>My Notes</h2>
-    <ul>
-        <li>
-            Note 1
-        </li>
-        <li>
-            Note 2
-        </li>
-    </ul>
-   </aside>
-   <footer>
-    <p>Keep in Touch</p>
-    <a href="https://www.linkedin.com/home?originalSubdomain=ca" alt="linkedin"><img src="linkedin.png" width="50px" height="50px"></a>
-    <a href="https://www.google.com/" alt="internet"><img src="internetlogo.png" width="50px" height="50px" alt="Internet"></a>
-   </footer>
-</body>
+    <aside>
+      <h2>My Notes</h2>
+      <ul>
+        <li>Note 1</li>
+        <li>Note 2</li>
+      </ul>
+    </aside>
+    <footer>
+      <p>Keep in Touch</p>
+      <a
+        href="https://www.linkedin.com/home?originalSubdomain=ca"
+        title="linkedin"
+        ><img src="linkedin.png" width="50" height="50" alt="linkedin"
+      ></a>
+      <a href="https://www.google.com/" title="internet"
+        ><img src="internetlogo.png" width="50" height="50" alt="Internet"
+      ></a>
+    </footer>
+  </body>
 </html>
