fixed color scheme for dark mode to be more impactful

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap"
       rel="stylesheet"
     >
+    <script href="scripts/myscript.js" defer ></script>
   </head>
   <body>
     <main>
