fixed textbox and made it a textarea

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap"
       rel="stylesheet"
     >
-    <script href="scripts/myscript.js" defer ></script>
+    <script src="scripts/myscript.js" defer></script>
   </head>
   <body>
     <main>
@@ -27,7 +27,7 @@
       <div class="firstbuttons">
         <button>New Note</button><button class="darktheme">Dark Theme</button>
       </div>
-      <div class="textarea">This is a placeholder. . .</div>
+      <textarea>This is a placeholder. . .</textarea>
       <div class="secondbuttons">
         <button>Save</button><button class="cancel">Cancel</button>
       </div>
