finished dark theme for js

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <header>
         <h1>Take Better Notes</h1>
       </header>
-      <div class="info"><button>About</button><button>Docs</button></div>
+      <div class="info"><button class="aboutdoc">About</button><button class="aboutdoc">Docs</button></div>
       <div class="firstbuttons">
-        <button>New Note</button><button class="darktheme">Dark Theme</button>
+        <button id="newnote">New Note</button><button class="darktheme">Dark Theme</button>
       </div>
       <textarea>This is a placeholder. . .</textarea>
       <div class="secondbuttons">
