--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="firstbuttons">
         <button id="newnote">New Note</button><button class="darktheme">Dark Theme</button>
       </div>
-      <textarea>This is a placeholder. . .</textarea>
+      <textarea class="hidden">This is a placeholder. . .</textarea>
       <div class="secondbuttons">
-        <button>Save</button><button class="cancel">Cancel</button>
+        <button class="hidden">Save</button><button class="cancel hidden">Cancel</button>
       </div>
     </main>
     <aside>
