fixed placeholder properties

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="firstbuttons">
         <button id="newnote">New Note</button><button class="darktheme">Dark Theme</button>
       </div>
-      <textarea class="hidden">This is a placeholder. . .</textarea>
+      <textarea class="hidden" placeholder="This is a placeholder. . ."></textarea>
       <div class="secondbuttons">
         <button class="hidden">Save</button><button class="cancel hidden">Cancel</button>
       </div>
